--- a/index.haml
+++ b/index.haml
@@ -312,7 +312,7 @@
           %header
             %h1 Selected Segments
             %p
-              By offering mobile services, our partner's products and services become more 
+              By offering mobile services, our partners' products and services become more 
               compelling and existing assets can be monetized. If you are active in one of 
               the following industries, there is significant potential in partnering with us to 
               offer mobile telecommunications services. Beyond these fields there are limitless 
@@ -445,7 +445,7 @@
           %header
             %h1 Business Models
             %p
-              We have experience with a large variety of business models that complement 
+              We have experience with a large variety of MVNO business models that complement 
               our partners' assets, competencies and investments. Together with our partners, 
               we select the most appropriate commercial and technical set-up for each project.
 
@@ -653,7 +653,7 @@
 
       %noscript
         %div
-          %img{alt:"DCSIMG", id:"DCSIMG", width:"1", height:"1", src:"https://mvno.telekom.de/dcsxln2virb0sziiu1yfoaoee_6i5i/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=9.3.0"}/
+          %img{alt:"DCSIMG", id:"DCSIMG", width:"1", height:"1", src:"https://www.wtpx-telekom.com/dcsxln2virb0sziiu1yfoaoee_6i5i/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=9.3.0"}/
 
     
 
