--- a/index.haml
+++ b/index.haml
@@ -108,7 +108,7 @@
             .imprint-right
               %h3 Responsible:
               %p
-                %strong Ursula Knipp
+                Ursula Knipp
                 %br/
                 %br/
                 Deutsche Telekom AG
