--- a/index.haml
+++ b/index.haml
@@ -10,7 +10,6 @@
   %head
 
 
-
     %meta{ :charset => "utf-8" }/
 
     %meta{ "http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1" }/
@@ -278,184 +277,128 @@
 
         %article.clearfix
           %header
-            %h1 Deutsche Telekom for MVNOs
-            %p.intro 
-              Deutsche Telekom is one of the world's leading integrated telecommunications 
-              companies. We operate mobile networks in 15 European countries as well as the 
-              US and offer the only cross-Atlantic mobile telecommunications footprint in the world.
-
-          %section.span2
+            %h1 
+              Deutsche Telekom For
+              %span Mobile virtual network operators
+            %img{src: "img/title-mobile-virtual-network-operators.jpg", width: 920}
+          %section.intro_copy
             %p 
-              Our goal is to innovate our industry and provide our customers with the best 
-              possible service. Essential to achieving this objective are strong partnerships, 
-              of which one of the most important is the enablement of Mobile Virtual Network Operators (MVNOs).
+              Deutsche Telekom is one of the world's leading integrated telecommunications companies. We operate mobile networks in 15 European countries as well as the US and offer the only cross-Atlantic mobile telecommunications footprint in the world.
 
-          %section.span2
+          %section
             %p 
-              We are a pioneer in the Virtual Operator field and host a number of the world's 
-              most successful MVNOs on our networks. With our extensive knowledge, we give 
-              our partners the support they need to successfully enter the telecommunications space.
+              Our goal is to innovate our industry and provide our customers with the best possible service. Essential to achieving this objective are strong partnerships, of which one of the most important is the enablement of Mobile Virtual Network Operators (MVNOs). We are a pioneer in the Virtual Operator field and host a number of the world's most successful MVNOs on our networks. With our extensive knowledge, we give our partners the support they need to successfully enter the telecommunications space.
 
 
-        %article.clearfix
+        -#%article.clearfix
 
-          %section.span3.imgspan3
-            %img{src: "img/content-business.jpg", alt: "Business"}
-          %section.span3.imgspan3
-            %img{src: "img/content-ethnic.jpg", alt: "Ethnic"}
-          %section.span3.imgspan3
-            %img{src: "img/content-youth.jpg", alt: "Youth"}
+        -#  %section.span3.imgspan3
+        -#    %img{src: "img/content-business.jpg", alt: "Business"}
+        -#  %section.span3.imgspan3
+        -#    %img{src: "img/content-ethnic.jpg", alt: "Ethnic"}
+        -#  %section.span3.imgspan3
+        -#    %img{src: "img/content-youth.jpg", alt: "Youth"}
 
-        %hr
+        -#%hr
 
         %article.clearfix.segments.selected-segments
           %header
-            %h1 Selected Segments
-            %p
-              By offering mobile services, our partners' products and services become more 
-              compelling and existing assets can be monetized. If you are active in one of 
-              the following industries, there is significant potential in partnering with us to 
-              offer mobile telecommunications services. Beyond these fields there are limitless 
-              innovation possibilities with MVNO services!
-
-            %hr.mobile-only
-
-          %section.span3
-            %h2 Retailers
-            .spanwrapper
-              .vector.bordered 
-                <!--[if lte IE 8]>
-                %img{src: "img/pic_retailers.png", alt: "Retailers"}
-                <![endif]--> 
-                <!--[if gte IE 9]>
-                %img{src: "img/pic_retailers.svg", alt: "Retailers"}
-                <![endif]--> 
-                <!--[if !IE]><!-->
-                %img{src: "img/pic_retailers.svg", alt: "Retailers"}
-                <!--<![endif]--> 
-
-              %ul
-                %li Increase points of sales footfall
-                %li Improve loyalty of customer base with cross segment/category campaigns
-                %li Exploit revenues from mobile services and devices
-            %hr
+            %h1 
+              Selected Segments
+            %img{src: "img/title-selected-segments.jpg", width: 920}
 
 
-          %section.span3
-            %h2 Ethnic Brands
-            .spanwrapper
-              .vector.bordered
-                <!--[if lte IE 8]>
-                %img{src: "img/pic_ethnic_brands.png", alt: "Ethnic Brands"}
-                <![endif]--> 
-                <!--[if gte IE 9]>
-                %img{src: "img/pic_ethnic_brands.svg", alt: "Ethnic Brands"}
-                <![endif]--> 
-                <!--[if !IE]><!-->
-                %img{src: "img/pic_ethnic_brands.svg", alt: "Ethnic Brands"}
-                <!--<![endif]-->
-              %ul
-                %li Monetize international calling routes and customer base
-                %li Provide best value mobile service for international calls
-                %li Target ethnic groups with individual mobile services
-            %hr
+          %section.intro_copy
+            %p 
+              By offering mobile services, our partner's products and services become more compelling and existing assets can be monetized. If you are active in one of the following industries, there is significant potential in partnering with us to offer mobile telecommunications services. Beyond these fields there are limitless innovation possibilities with MVNO services!
 
 
-          %section.span3
-            %h2 Youth Brands
-            .spanwrapper
-              .vector.bordered
-                <!--[if lte IE 8]>
-                %img{src: "img/pic_youth_brands.png", alt: "Youth Brands"}
-                <![endif]--> 
-                <!--[if gte IE 9]>
-                %img{src: "img/pic_youth_brands.svg", alt: "Youth Brands"}
-                <![endif]--> 
-                <!--[if !IE]><!-->
-                %img{src: "img/pic_youth_brands.svg", alt: "Youth Brands"}
-                <!--<![endif]-->
-              %ul
-                %li Monetize brand awareness and media reach with teenager and young adult segments
-                %li Grow customers' brand interaction time and content consumption
-                %li Stimulate brand loyalty
-            %hr
+          .clearfix
+            %section.span3
+              %h2 Retailers
+              .spanwrapper
+                .vector
+                  %img{src: "img/pic_retailers.png", alt: "Retailers", width: 280}
 
-        %article.clearfix.segments
+                %ul
+                  %li Increase points of sales footfall
+                  %li Improve loyalty of customer base with cross segment/category campaigns
+                  %li Exploit revenues from mobile services and devices
+              %hr
 
-          %section.span3
-            %h2 Social Networks
-            .spanwrapper
-              .vector.bordered
-                <!--[if lte IE 8]>
-                %img{src: "img/pic_social_networks.png", alt: "Social Networks"}
-                <![endif]--> 
-                <!--[if gte IE 9]>
-                %img{src: "img/pic_social_networks.svg", alt: "Social Networks"}
-                <![endif]--> 
-                <!--[if !IE]><!-->
-                %img{src: "img/pic_social_networks.svg", alt: "Social Networks"}
-                <!--<![endif]-->
-              %ul
-                %li Provide specific propositions for mobile social network use
-                %li Monetize user base by adding social commerce and service extras
-                %li Encourage user loyalty by integrating mobile services into core brand proposition
-            %hr
 
-          %section.span3
-            %h2 Fixed Operators
-            .spanwrapper
-              .vector.bordered
-                <!--[if lte IE 8]>
-                %img{src: "img/pic_fixed_operators.png", alt: "Fixed Operators"}
-                <![endif]--> 
-                <!--[if gte IE 9]>
-                %img{src: "img/pic_fixed_operators.svg", alt: "Fixed Operators"}
-                <![endif]--> 
-                <!--[if !IE]><!-->
-                %img{src: "img/pic_fixed_operators.svg", alt: "Fixed Operators"}
-                <!--<![endif]-->
-              %ul
-                %li Provide full telecommunications portfolio to subscriber base
-                %li Reduce churn by offering multi-play bundles
-                %li Leverage existing network assets to provide integrated services
-            %hr
+            %section.span3
+              %h2 Ethnic Brands
+              .spanwrapper
+                .vector
+                  %img{src: "img/pic_ethnic_brands.png", alt: "Ethnic Brands", width: 280}
+                %ul
+                  %li Monetize international calling routes and customer base
+                  %li Provide best value mobile service for international calls
+                  %li Target ethnic groups with individual mobile services
+              %hr
 
-          %section.span3
-            %h2 Data
-            .spanwrapper
-              .vector.bordered
-                <!--[if lte IE 8]>
-                %img{src: "img/pic_data.png", alt: "Data"}
-                <![endif]--> 
-                <!--[if gte IE 9]>
-                %img{src: "img/pic_data.svg", alt: "Data"}
-                <![endif]--> 
-                <!--[if !IE]><!-->
-                %img{src: "img/pic_data.svg", alt: "Data"}
-                <!--<![endif]-->
-              %ul
-                %li Improve product appeal by bundling devices and connectivity
-                %li Offer advanced services (e.g. M2M, maintenance service)
-                %li Add continuous service revenues to one-time device sales revenues
-            %hr
 
-        %hr.section-divider
+            %section.span3
+              %h2 Youth Brands
+              .spanwrapper
+                .vector
+                  %img{src: "img/pic_youth_brands.png", alt: "Youth Brands", width: 280}
+                %ul
+                  %li Monetize brand awareness and media reach with teenager and young adult segments
+                  %li Grow customers' brand interaction time and content consumption
+                  %li Stimulate brand loyalty
+              %hr
+
+
+          .clearfix
+            %section.span3
+              %h2 Social Networks
+              .spanwrapper
+                .vector
+                  %img{src: "img/pic_social_networks.png", alt: "Social Networks", width: 280}
+                %ul
+                  %li Provide specific propositions for mobile social network use
+                  %li Monetize user base by adding social commerce and service extras
+                  %li Encourage user loyalty by integrating mobile services into core brand proposition
+              %hr
+
+            %section.span3
+              %h2 Fixed Operators
+              .spanwrapper
+                .vector
+                  %img{src: "img/pic_fixed_operators.png", alt: "Fixed Operators", width: 280}
+                %ul
+                  %li Provide full telecommunications portfolio to subscriber base
+                  %li Reduce churn by offering multi-play bundles
+                  %li Leverage existing network assets to provide integrated services
+              %hr
+
+            %section.span3
+              %h2 Data
+              .spanwrapper
+                .vector
+                  %img{src: "img/pic_data.png", alt: "Data", width: 280}
+                %ul
+                  %li Improve product appeal by bundling devices and connectivity
+                  %li Offer advanced services (e.g. M2M, maintenance service)
+                  %li Add continuous service revenues to one-time device sales revenues
+              %hr
+
 
         %article.clearfix.business-models
           %header
-            %h1 Business Models
-            %p
-              We have experience with a large variety of MVNO business models that complement 
-              our partners' assets, competencies and investments. Together with our partners, 
-              we select the most appropriate commercial and technical set-up for each project.
+            %h1 
+              Deutsche Telekom For
+              %span Mobile virtual network operators
+            %img{src: "img/title-mobile-virtual-network-operators-business-models.jpg", width: 920}
+          %section.intro_copy
+            %p 
+              We have experience with a large variety of business models that complement our partners' assets, competencies and investments. Together with our partners, we select the most appropriate commercial and technical set-up for each project.
 
-            %p
-              Our solution portfolio ranges from brand licensing/branded reselling to national 
-              roaming - and includes any model 
-              %span.nowrap in&#8209;between. 
-              In the first case, we operationally 
-              manage the whole mobile service delivery and rely on our partners' branding and 
-              marketing assets. In the latter case, our partners run their own mobile (core) network.
+          %section
+            %p 
+              Our solution portfolio ranges from brand licensing/branded reselling to national roaming - and includes any model in-between. In the first case, we operationally manage the whole mobile service delivery and rely on our partners' branding and marketing assets. In the latter case, our partners run their own mobile (core) network.
 
           %section
 
