--- a/css/ie8-bak.scss
+++ b/css/ie8-bak.scss
@@ -1,40 +1,6 @@
 /* ==========================================================================
    HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
    ========================================================================== */
-@encoding "UTF-8";
-@font-face {
-  font-family: 'Tele-Icon';
-  src: url("../fonts/Tele-Icon.eot");
-  src: url("../fonts/Tele-Icon.eot?#iefix") format("embedded-opentype"), url("../fonts/Tele-Icon.svg#Tele-Icon") format("svg"), url("../fonts/Tele-Icon.woff") format("woff"), url("../fonts/Tele-Icon.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-.icon:before, .icon .before {
-  font-family: Tele-Icon;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-@font-face {
-  font-family: 'TeleGrotesk';
-  src: url("../fonts/TeleGroteskNormal.eot?") format("eot"), url("../fonts/TeleGroteskNormal.woff") format("woff");
-}
-@font-face {
-  font-family: 'TeleGroteskFett';
-  src: url("../fonts/TeleGroteskFett.eot?") format("eot"), url("../fonts/TeleGroteskFett.woff") format("woff");
-}
-@font-face {
-  font-family: 'TeleGroteskHalbfett';
-  src: url("../fonts/TeleGroteskHalbfett.eot?") format("eot"), url("../fonts/TeleGroteskHalbfett.woff") format("woff");
-}
-@font-face {
-  font-family: 'TeleGroteskUltra';
-  src: url("../fonts/TeleGroteskUltra.eot?") format("eot"), url("../fonts/TeleGroteskUltra.woff") format("woff");
-}
-
-
-
-
-
 
 html,
 button,
@@ -44,10 +10,10 @@ textarea {
     color: #222;
 }
 
+
 body {
     font-size: 1em;
     line-height: 1.4;
-    background: #ededed;
 }
 
 ::-moz-selection {
@@ -96,12 +62,11 @@ textarea {
    ========================================================================== */
 
 body {
-
+    font: 16px/26px Arial;
 }
 
-header.wrapper {
-  background: #ededed;
-  padding: 0;
+.wrapper {
+  margin: 0 auto;
 }
 
 
@@ -121,9 +86,8 @@ header.wrapper {
   padding-right: 3%;
 }
 .span3 {
-  h2, h3 {
-    font-family: 'TeleGroteskFett';
-
+  img {
+    max-width: 100%;
   }
   h2 {
     color: #4B4B4B;
@@ -138,18 +102,15 @@ header.wrapper {
 
     li {
       color: #797979;
-      background: transparent url('../img/dot-blue.png') left .6em no-repeat;
+      background: transparent url('../img/dot.png') left .6em no-repeat;
       padding: 0 0 0 1em;
       margin-bottom: 1em;
-      font-size: 19px;
-      color: #383838;
-      font-family: 'TeleGrotesk';
     }
   }
 }
 
 .vector {
-  background: #ededed;
+
   /*width: 17.25em;*/
   width: 100%;
   margin-bottom: 1.725em;
@@ -175,72 +136,57 @@ header.wrapper {
   font-size: 1em;
   line-height: 0;
   margin: 0;
-  margin-bottom: 23px;
-  margin-top: 20px !important;
+  height: 4.8125em;
   background-position: left top;
+  -webkit-background-size: 57.5em 4.8125em;
+  -o-background-size: 57.5em 4.8125em;
+  -moz-background-size: 57.5em 4.8125em;
+  background-size: 57.5em 4.8125em;
   -webkit-margin-before: 0px;
   -webkit-margin-after: 0px;
   -webkit-margin-start: 0px;
   -webkit-margin-end: 0px;
 
+  background: white url('../img/logo.png') no-repeat;
 }
-
-.lt-ie10 .logo, .ie10 .logo {
-  background: white url('../img/logo2-lores.png') no-repeat;
-
-}
-$logoclaimwidth: 188px;
-$logoclaimheight: 15px;
+$logoclaimwidth: 7.3510625em;
+$logoclaimheight: 0.96475em;
 .logoclaim {
   font-size: 1em;
   line-height: 0;
   margin: 0;
   padding: 0;
+  width: $logoclaimwidth;
+  height: $logoclaimheight;
   position: absolute;
   z-index: 100;
-  right: 0;
-  top: 42px;
+  right: 1.5625em;
+  top: 0.9375em;
   background-position: left top;
+  -webkit-background-size: $logoclaimwidth $logoclaimheight;
+  -o-background-size: $logoclaimwidth $logoclaimheight;
+  -moz-background-size: $logoclaimwidth $logoclaimheight;
+  background-size: $logoclaimwidth $logoclaimheight;
   -webkit-margin-before: 0px;
   -webkit-margin-after: 0px;
   -webkit-margin-start: 0px;
   -webkit-margin-end: 0px;
 
-}
-.lt-ie10 .logoclaim, .ie10 .logogclaim {
-  background: white url('../img/logo2-claim-lores.png') no-repeat;
-  width: 188px;
-  height: 15px;
-}
-.logo {
-  width: 100px;
-  height: 50px;
-  background: transparent url('../img/logo2-lores.png') no-repeat;
-  -webkit-background-size: 100px 50px;
-  -o-background-size: 100px 50px;
-  -moz-background-size: 100px 50px;
-  background-size: 100px 50px;
-  }
-  .logoclaim {
-  width: 188px;
-  height: 15px;
-  background: white url('../img/logo2-claim-lores.png') no-repeat;
-  -webkit-background-size: 188px 15px;
-  -o-background-size: 188px 15px;
-  -moz-background-size: 188px 15px;
-  background-size: 188px 15px;
+  background: white url('../img/logo-claim.png') no-repeat;
+  width: 117px;
+  height: 19px;
 }
 .header-container {
+  position: fixed;
   width: 100%;
+  text-align: center;
   top: 0;
   z-index: 500;
-  height: 135px;
-  background: #ededed;
 }
 header {
+  background: #fff;
   position: relative;
-  background: #ededed;
-  /*padding-top: 20px;*/
+  margin-top: 3.1em;
   h1 {
     margin: 0;
     margin-bottom: 1.4em;
@@ -258,10 +204,16 @@ header {
 
   }
 }
-.nowrap {
-  white-space:nowrap;
-}
+footer {
 
+  h1 {
+    margin: 0;
+    margin-bottom: 1.4em;
+    font-size: 1.65em;
+    color: #e20074;
+    font-weight: normal;
+  }
+}
 section {
   p {
     color: #797979;
@@ -284,28 +236,30 @@ hr {
   margin-top: 6.9375em;
 }
 .footer-container {
-  background: #fff;
+  background: #EDEDED;
   padding-bottom: .4em;
-  padding: 22px;
-  width: 920px;
-  h1 {
-    
+}
+footer {
+  margin-top: 1.25em;
+  padding-top: 2.125em;
+  h3 {
+    font-size: 1.375em;
+    color: #e20074;
+    margin-bottom: 2.4em;
   }
 }
-
-
+.footerlinks {
+  margin-top: 2em;
+  font-size: 0.625em;
+}
+.map-wrapper {
+  width: 27.625em;
+}
 
 .main-nav {
   margin: 0;
   padding: 0;
-  margin-top: 23px;
   width: 100%;
-  display: block;
-  li {
-    a {
-      font-family: 'TeleGroteskHalbfett';
-    }
-  }
 }
 
 .boxed {
@@ -330,21 +284,16 @@ hr {
   padding: 1.1875em;
   padding-left: 1.125em;
   padding-right: 0;
-  margin-bottom: 10px;
-  font-family: 'TeleGrotesk';
-  font-size: 19px;
-  border: 1px solid #fff;
-  background: #ededed;
   h4 {
     margin: 0;
     font-size: 1.125em;
-    font-family: 'TeleGroteskFett';
+    font-weight: bold;
     color: #4B4B4B;
   }
   ul {
     margin-top: .7em;
     font-size: 1em;
-    color: #383838;
+    color: #797979;
 
     li {
       margin-bottom: .5em;
@@ -353,23 +302,27 @@ hr {
   
 }
 .dark, .medium, .light {
+  position: relative;
+  border-color:#fff;
+  border-width:1px;
+  -moz-border-radius:6px;
+  -webkit-border-radius:6px;
+  border-radius:6px;
+  border-style:solid;
   padding: 1.125em;
   padding-bottom: 0;
   margin-bottom: 12px;
-  font-family: 'TeleGrotesk';
-  font-size: 19px;
-  border: 1px solid #fff;
+  behavior: url('PIE.htc');
 
   h3 {
     font-size: 1.375em;
-    font-family: 'TeleGroteskFett';
+    font-weight: bold;
     margin: 0;
   }
   h4 {
     margin-top: 1.7em;
     margin-bottom: .1em;
     font-size: 1.125em;
-    font-family: 'TeleGroteskFett';
   }
   ul {
     /*line-height: 2em;*/
@@ -385,27 +338,21 @@ hr {
   }
 }
 .dark {
-  background: #64b9e4;
+  background: #4b4b4b;
   color: #fff;
   h3, h4, p, ul li {
     color: #fff;
   }
-  ul {
-    li {
-      background: transparent url('../img/dot-white.png') left .6em no-repeat;
-
-    }
-  }
 
 }
 .medium {
-  background: #99d1ed;
-  color: #383838;
+  background: #D0D0D0;
+  color: #4B4B4B;
 
 }
 .light {
-  background: #cce8f6;
-  color: #383838;
+  background: #EDEDED;
+  color: #4b4b4b;
 
 }
 
@@ -428,53 +375,227 @@ hr {
     float: right;
   }
 }
+.contact {
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-article {
-  background: #fff;
-  header {
-    position: relative;
-    h1 {
-      position: absolute;
-      color: #fff;
-      font-family: 'TeleGroteskFett';
-      text-transform: uppercase;
-      background: transparent url('../img/headline-bg-multiline.png') right top no-repeat;
-      span { 
-        display: block;
-        font-family: 'TeleGrotesk';
-      }
-    }
+  p {
+    line-height: 1.5em;
+    font-size: 1.125em;
+    color:rgb(75,75,75);
   }
-  section {
-    p {
-      font-size: 19px;
-      color: #383838;
-      font-family: 'TeleGrotesk';
-      padding-right: 20px;
-      line-height: 25px;
-    }
+  .top {
+    font-size: 1em;
+    line-height: 1.3em;
+    margin-top: 0;
   }
-  section.intro_copy {
-    p {
-      font-family: 'TeleGroteskFett';
-      font-size: 21px; 
-      margin-bottom: 28px;
-    }
+  img {
+    float: left;
+    padding: 0 1.375em 1.375em 0;
   }
+}
+.countryinfo {
+  p {
+    margin-top: 0;
+    color: rgb(75,75,75);
+    font-size: 1.125em;
+  }
+  select {
+    margin-bottom: 3.0625em;
+    width: 80%;
+  }
+}
+
+/* OLD START */
+.header-container {
+  position: fixed;
+}
+.mini-nav-wrapper {
+  display: none;
+}
+.logoclaim {
+  right: 1.5em;
+}
+nav {
+  display: block;
+  position: relative;
+  z-index: 200;
+}
+.main-container {
+  margin-top: 6.9375em;
+}
+.section-divider {
+  display: block;
+  margin-top: 2.2em;
+}
+article p {
+  margin-bottom: 1.5em;
+}
+section p {
+  margin-top: 0em;
+  font-size: 1.125em;
+}
+.subcontent section p {
+  font-size: 1em;
+  color: #797979;
+}
+section.span2 p {
+  font-size: 1em;
+}
+.segments {
+  margin-bottom: 2em;
+}
+header h1 {
+  margin-bottom: 1.2em;
+}
+.span2 {
+  width: 46.95652173913044%;
+  /*width: 27.5em;*/
+}
+.imgspan3 {
+  float: left;
+  max-width: 31%;
+  margin-right: 3.4%;
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+.imgspan3:last-child {
+  margin-right: 0;
+}
+.span3 {
+  float: left;
+  width: 17.5em;
+  margin-right: 2.35em;
+  h2, h3 {
+    font-weight: normal;
+    font-size: 1.625em;
+    cursor: auto;
+    background: none;
+    padding-left: 0;
+  }
+  h2 {
+    margin-top: 0.5em;
+  }
+  h3 {
+    margin-bottom: 0.5em;
+  }
+  .spanwrapper {
+    display: block;
+  }
+  hr {
+    display: none;
+  }
+  ul li {
+    margin-bottom: .5;
+  }
+}
+.span3:last-of-type {
+  margin-right:0 ;
+}
+.span3 {
+  margin-right: 1.5em;
+}
+.fixed-height-wrapper {
+  margin-top: 2.7em;
+}
+.wrapper {
+  width: 57.5em;
+}
+.main-nav {
+  display:table;
+}
+
+.main-nav li {
+  display: table-cell;
+  a {
+    font-size: 100%;
+  }
+}
+.lt-ie8 .main-nav li {
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.filler {
+  width: 34%;
+}
+.vector {
+  margin-left: 0;
+  width: 100%;
+}
+.fillerbox {
+  display: block;
+}
+.contact {
+
+  float: left;
+  width: 26.25em;
+  border-right: 1px solid #A4A4A4;
+  padding-right: 1.5625em;
+}
+.countryinfo {
+  float: right;
+  width: 27.5625em;
+}
+.copyright {
+  float: right;
+  width: 44em;
+}
+.otherlinks {
+  float: left;
+  width: 40em;
+}
+.mobile-only {
+  display: none;
+} 
+.footer-container {
+  background: #EDEDED;
+  margin-top: 3em;
+  padding-bottom: .4em;
+}
+footer {
+  margin-top: 1.25em;
+  padding-top: 2.125em;
+  h3 {
+    font-size: 1.375em;
+    color: #e20074;
+    margin-bottom: 2.1em;
+    margin-top: 0.5em;
+  }
+  p {
+    margin-bottom: 1.4em;
+  }
+  p.top {
+    margin-bottom: 0.7em;
+  }
+}
+.footerlinks {
+  line-height: 1em;
+
+  span {
+    display: inline;
+  }
+  .copyrightline {
+    margin-top: 0em; 
+  }
+}
+.map-wrapper {
+  width: 27.625em;
+  img {
+    width: 100%;
+    max-width: 442px;
+    height: auto;
+  }
+}
+.imprint-left {
+  float: left;
+  width: 46.95652173913044%;
+}
+.imprint-right {
+  float: right;
+  width: 46.95652173913044%;
+
 }
 
 .subcontent h1 {
@@ -493,12 +614,6 @@ article {
   font-size: 1em;
 }
 
-.imprint, .legaldisclaimer {
-  margin: 0 auto;
-}
-.legaldisclaimer {
-  margin-bottom: 20px;
-}
 .imprint-left, .imprint-right {
   line-height: 1.3em;
   h3 {
@@ -508,339 +623,11 @@ article {
 .subcontent {
   display: none;
 }
-
-
-
-
-.header-container {
-  width: 964px;
-  margin: 0 auto;
-}
-.header-container, .footer-container {
-  width: 964px;
-}
-.maincontent, .main-container, .footer-container {
-  margin: 0 auto;
-}
-header.wrapper {
-  width: 964px;
-}
-.wrapper {
-  width: 964px;
-}
-.header-container {
-}
-.mini-nav-wrapper {
-  display: none;
-}
-.logoclaim {
-  right: 1.5em;
-}
-nav {
-  display: block;
-}
-.main-nav {
-  display:table;
-  li {
-    display: table-cell;
-
-    a {
-      padding-left: 20px;
-      padding-right: 20px;
-      height: 39px;
-      line-height: 39px;
-      font-size: 19px;
-    }
-  }
-  .filler {
-    width: 28%;
-  }
-}
-.lt-ie8 .main-nav li {
-  float: left;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-.main-container {
-  margin-top: 30px;
-}
-.section-divider {
-  display: block;
-  margin-top: 2.2em;
-}
-article p {
-  margin-bottom: 1.5em;
-}
-article {
-  padding: 22px;
-  margin-bottom: 50px;
-  header {
-    position: relative;
-    margin-bottom: 25px;
-    h1 {
-      position: absolute;
-      left: 15px;
-      bottom: 15px;
-      margin-bottom: 0;
-      font-size: 31px;
-      line-height: 34px;
-      padding-top: 46px;
-      padding-right: 52px;
-      padding-left: 15px;
-      padding-bottom: 7px;
-      background: transparent url('../img/headline-bg-multiline.png') right top no-repeat;
-    }
-  }
-  section {
-    p {
-      font-size: 19px;
-      color: #383838;
-      font-family: 'TeleGrotesk';
-      padding-right: 20px;
-      line-height: 25px;
-    }
-  }
-  section.intro_copy {
-    p {
-      font-family: 'TeleGroteskFett';
-      font-size: 21px; 
-      margin-bottom: 28px;
-    }
-  }
-}
-section p {
-  margin-top: 0em;
-  font-size: 1.125em;
-}
-.subcontent section p {
-  font-size: 1em;
-  color: #797979;
-}
-section.span2 p {
-  font-size: 1em;
-}
-.segments {
-}
-header h1 {
-  margin-bottom: 1.2em;
-}
-.span2 {
-  width: 46.95652173913044%;
-}
-.imgspan3 {
-  float: left;
-  max-width: 31%;
-  margin-right: 3.4%;
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-}
-.imgspan3:last-child {
-  margin-right: 0;
-}
-.span3 {
-  float: left;
-  width: 17.5em;
-  margin-right: 2.35em;
-  h2, h3 {
-    font-weight: normal;
-    font-size: 26px;
-    line-height: 29px;
-    cursor: auto;
-    background: none;
-    padding-left: 0;
-  }
-  h2 {
-    margin-top: 0.5em;
-    margin-bottom: 20px;
-  }
-  h2.open, h3.open {
-    background: none;
-  }
-  .dark {
-    h3, h3.open {
-      background: none;
-    }
-  }
-  h3 {
-    margin-bottom: 0.5em;
-  }
-  h4 {
-    font-size: 26px;
-    line-height: 29px;
-
-  }
-  .spanwrapper {
-    display: block !important;
-  }
-  hr {
-    display: none;
-  }
-  ul li {
-    margin-bottom: .5;
-    font-size: 16px;
-  }
-}
-.span3:last-of-type {
-  margin-right:0 ;
-}
-.lt-ie9 .span3 {
-  margin-right: 1.5em;
-}
-.fixed-height-wrapper {
-  margin-top: 2.7em;
-} 
-.vector {
-  margin-left: 0;
-  width: 100%;
-}
-.fillerbox {
-  display: block;
-  padding: 22px 0 22px 22px;
-}
-.contact {
-
-  float: left;
-  width: 26.25em;
-  border-right: 1px solid #A4A4A4;
-  padding-right: 1.5625em;
-}
-.countryinfo {
-  float: left;
-  max-width: 442px;
-  margin-left: 34px;
-}
-.copyright {
-  float: right;
-  width: 442px;
-}
-.otherlinks {
-  float: left;
-  width: 40em;
-}
-.mobile-only, .mobile-block {
-  display: none;
-} 
-.footer-container {
-  padding: 0;
-}
-footer {
-  font-family: 'TeleGrotesk';
-  color: #383838;
-  padding: 20px;
-  h1 {
-    margin: 0;
-    margin-bottom: 27px;
-    color: #e20074;
-    font-family: 'TeleGroteskUltra';
-    font-size: 36px;
-    text-transform: uppercase;
-  }
-  h3 {
-    font-family: 'TeleGroteskFett';
-    font-size: 1.375em;
-    color: #e20074;
-    margin-bottom: 2.1em;
-    margin-top: 0.5em;
-  }
-  p {
-    margin: 1em 0;
-    font-size: 19px;
-    line-height: 20px;
-  }
-  strong {
-    font-family: 'TeleGroteskFett';
-  }
-  .footerlinks {
-    margin-top: 2em;
-    p {
-      font-size: 13px !important;
-    }
-  }
-  .map-wrapper {
-    width: 27.625em;
-    img {
-      width: 100%;
-      max-width: 442px;
-      height: auto;
-    }
-  }
-  .contact {
-   .top {
-      margin-top: 0;
-      padding-bottom: 10px;
-      clear: none;
-    }
-    img {
-      float: left;
-      padding: 0 1.375em 1.375em 0;
-    }
-  }
-  .countryinfo {
-    p {
-      margin-top: 0;
-    }
-    select {
-      margin-bottom: 3.0625em;
-      width: 80%;
-    }
-  }
-}
-.footerlinks {
-  line-height: 1em;
-
-  span {
-    display: inline;
-  }
-  .copyrightline {
-    margin-top: 0em; 
-  }
-}
-.map-wrapper {
-  width: 27.625em;
-}
-.imprint-left {
-  float: left;
-  width: 46.95652173913044%;
-}
-.imprint-right {
-  float: right;
-  width: 46.95652173913044%;
-
-}
-.contact img {
-  float: left;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* ===============
   Nav elements
   -=============== */
 
-$navcorner: 0px;
+$navcorner: 0.375em;
 .main-nav {
   position: relative;
   z-index: 100;
@@ -886,7 +673,6 @@ $navcorner: 0px;
   z-index: 130;
 
   display: block;
-  text-align:center;
   height: 2.4em;
   line-height: 2.5em;
   color: #4B4B4B;
@@ -898,9 +684,12 @@ $navcorner: 0px;
 }
 
 .main-nav li a:hover { 
+  background: transparent url('../img/btn-hover.jpg') top left repeat-x;
 }
 .main-nav li a:active, .home-state #link1 a, .selected-segments-state #link2 a, .business-models-state #link3 a, .contact-state #link4 a {
+  background: transparent url('../img/btn-active.jpg') top left repeat-x;
 }
+
 
 
 
@@ -910,7 +699,7 @@ $navcorner: 0px;
 
 .ir {
     background-color: transparent;
-    /*border: 0;*/
+    border: 0;
     overflow: hidden;
     text-indent: -9999px;
 }
@@ -972,7 +761,6 @@ $navcorner: 0px;
 
 @media print {
     * {
-        background: transparent !important;
         color: #000 !important; /* Black prints faster: h5bp.com/s */
         box-shadow: none !important;
         text-shadow: none !important;
